--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "astro": "^4.11.6",
     "fuse.js": "^7.0.0",
     "github-slugger": "^2.0.0",
+    "katex": "^0.16.11",
+    "rehype-katex": "^7.0.0",
     "remark-collapse": "^0.1.2",
+    "remark-math": "^6.0.0",
     "remark-toc": "^9.0.0",
     "satori": "^0.10.11",
     "tailwindcss": "^3.4.1",
